--- a/.github/workflows/discover-api.yml
+++ b/.github/workflows/discover-api.yml
@@ -4,8 +4,8 @@ name: Sync Discovered API with ApiConnect
 on: []
 
 env:
-  API_HOST: d-j02.apiconnect.dev.automation.ibm.com
-  PROVIDER_ORG: niraimathi
+  API_HOST: eu-central-a.apiconnect.automation.ibm.com
+  PROVIDER_ORG: tech-sales
   #API_FILES: gmail-api.json
   #API_FILES: gmail-api.json,mit-api.json,gmail-api.yaml,APIfolder/uber-api.json
   API_FOLDERS: APIfolder
