--- a/.github/workflows/discover-api.yml
+++ b/.github/workflows/discover-api.yml
@@ -7,7 +7,7 @@ env:
   PROVIDER_ORG: tech-sales
   #API_FILES: gmail-api.json
   #API_FILES: gmail-api.json,mit-api.json,gmail-api.yaml,APIfolder/uber-api.json
-  API_FOLDERS: APIfolder
+  API_FOLDERS: APIfolder,APIfolderTwo
   
 jobs:
   check_changes_job:
